Rename ONNX folder

--- a/SmartBlazorApp.AI/SmartBlazorApp.AI.csproj
+++ b/SmartBlazorApp.AI/SmartBlazorApp.AI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="vocab.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="2.0.0-preview.22313.1" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.12.1" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.12.1" />
