--- a/Client/SmartBlazorApp.Client.csproj
+++ b/Client/SmartBlazorApp.Client.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\SmartBlazorApp.Shared.csproj" />
+    <ProjectReference Include="..\Shared\SmartApp.Shared.csproj" />
   </ItemGroup>
 
 </Project>
