--- a/SmartApp.Graphic/SmartApp.Graphic.csproj
+++ b/SmartApp.Graphic/SmartApp.Graphic.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\SmartBlazorApp.Shared.csproj" />
+    <ProjectReference Include="..\Shared\SmartApp.Shared.csproj" />
   </ItemGroup>
 
 </Project>
