--- a/SmartBlazorApp.Razor/SmartBlazorApp.Razor.csproj
+++ b/SmartBlazorApp.Razor/SmartBlazorApp.Razor.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\SmartBlazorApp.Shared.csproj" />
+    <ProjectReference Include="..\Shared\SmartApp.Shared.csproj" />
   </ItemGroup>
 
 </Project>
