make BERT implmentation more threadsafe with objectppol follwing MS doucmentation

--- a/SmartApp.AI/SmartApp.AI.csproj
+++ b/SmartApp.AI/SmartApp.AI.csproj
@@ -7,19 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="ONNX\bertsquad-12.onnx" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="ONNX\bertsquad-12.onnx" />
     <EmbeddedResource Include="vocab.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="6.0.9" />
     <PackageReference Include="Microsoft.ML" Version="2.0.0-preview.22313.1" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.12.1" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.12.1" />
     <PackageReference Include="Microsoft.ML.OnnxTransformer" Version="2.0.0-preview.22313.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ONNX\bertsquad-12.onnx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
