--- a/Server/SmartBlazorApp.Server.csproj
+++ b/Server/SmartBlazorApp.Server.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Client\SmartBlazorApp.Client.csproj" />
     <ProjectReference Include="..\Shared\SmartApp.Shared.csproj" />
+    <ProjectReference Include="..\SmartApp.AI\SmartApp.AI.csproj" />
   </ItemGroup>
 
 
